# motion_notifier

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
docs/: Architecture.puml  base.mmd  base.puml  components.puml  configuration.puml  connections.puml  mind.puml
docs/classes/: auth.puml  dfs.puml  scheduler.puml
docs/events/: EventsChannel.puml
docs/objects/: events.puml
docs/sequence/: agent_ctrl.puml  auth.puml  commands.puml  dfs.puml  events.puml  scheduler.puml
docs/sequence/configuration/: start.puml  update.puml
docs/use_cases/: connections.puml  df_control.puml  events.puml  notifications.puml  use_cases.puml  usr_control.puml
features/: scheduler.feature
src/agent/my_queue/events_channel/events/: Parser.py  events_broker.py  events_subscriber.py
src/agent/queue/events_channel/: Subscriber.py  broker.py  events_queue.py  events_subscriber.py  subscriber.py
src/agent/queue/events_channel/events/: event.py  events_broker.py  events_subscriber.py
src/agent/scheduling/: config_manager.py  controller.py  cron_task.py
src/agent/scheduling/tasks/: cron_task.py  onetime_scheduled_task.py  recurrent_scheduled_task.py  scheduled_task.py
tests/functional/features/: scheduler.feature
tests/functional/step_defs/: scheduler.py
tests/unit/my_queue/: integration.py
tests/unit/queue/: integration.py
tests/unit/resources/config_manager/scheduler/: one_time.yaml
tests/unit/scheduler/: integration.py
tests/unit/scheduling/: controller.py  cron.py  integration.py  tasks.py
(+2 files in other folders)
