[tool.poetry]
name = "motion-notifier"
version = "0.1.0"
description = ""
authors = ["Daniel Haimov <saratoga8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-bdd = "^7.1.2"
pytest-xdist = "^3.6.1"
pytest-timeout = "^2.3.1"